--- a/styles.css
+++ b/styles.css
@@ -156,27 +156,23 @@ h2 {
     height: 6px;
     background: #ddd;
     border-radius: 5px;
-    background: rgb(132, 55, 132);
+    background: rgb(163, 106, 163);
     outline: none;
-    transition: background 0.3s;
   }
   
   .speed-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 16px;
     height: 16px;
-    background: #9c27b0;
+    background: #700580;
     border-radius: 50%;
     cursor: pointer;
-    border: 2px solid white;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   }
   
   .speed-slider::-moz-range-thumb {
     width: 16px;
     height: 16px;
-    background: #9c27b0;
-    border: 2px solid white;
+    background: #700580;
     border-radius: 50%;
     cursor: pointer;
   }
