--- a/styles.css
+++ b/styles.css
@@ -54,28 +54,31 @@ body {
 path-finding-simulator {
     display: flex;
     flex-direction: column;
-    border: 2px solid rgb(145, 145, 145);
-    background-color: #676090;
-    padding: 20px;
+    border: 5px solid rgb(125, 51, 140);
+    background-color: #64116092;
+    padding: 5px;
     border-radius: 8px;      
     resize: both;
 }
 
 .panel{
-    background-color: #febcd5;
+    background-color: rgb(132, 72, 144);
     height: fit-content;
-    padding: 10px;
-    width: 100%;
+    width: fit-content;
+    padding-left: 15px;
+    padding-right: 15px;
     align-self: center;
-    margin-top: 1rem;
+
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    position: absolute;
+    bottom: -120px; 
 }
 
 .grid-map {
-    background-color: rgb(182, 182, 182);
+    background-color: rgba(182, 182, 182, 0);
     display: grid;
     width: fit-content; 
     height: fit-content; 
@@ -86,10 +89,10 @@ path-finding-simulator {
 }
 
 .cell {
-    width: 38px;
-    height: 38px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
+    width: 95%;
+    height: 95%;
+    background-color: #ffffff46;
+    border: 1px solid #0000006a;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,7 +101,7 @@ path-finding-simulator {
 }
 
 .wall {
-    background-color: #736373 !important;
+    background-color: #000000d2 !important;
 }
 
 .add_walls_state {
@@ -123,13 +126,15 @@ path-finding-simulator {
 button {
     height: fit-content;
     min-width: fit-content;
-    margin: 10px;
+    margin: 8px;
     border-radius: 10px;
-    padding: 10px;
-    width: 100px;
+    padding: 8px;
+    width: 80px;
+    font-weight: 700;
+    border-style: none;
 }
 .reset {
-    background-color: #563cea;
+    background-color: #1c58ff;
     border: none;
     color: white;
     margin-left: auto;
@@ -138,13 +143,14 @@ button {
     background-color: yellow ;
 }
 .simulate-button {
-    background-color: #00AB66;
+    background-color: #01bc72;
     color: white;
     border: none;
     margin-left: auto;
 }
 h2 {
     margin-bottom: 5px;
+    margin-left: 20px;
     margin-top: 5px;
     font-family:'Courier New', Courier, monospace;
 }
@@ -163,7 +169,7 @@ h2 {
 }
   
 .speed-label {
-    color: rgb(1, 1, 1);
+    color: rgb(255, 255, 255);
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
@@ -208,20 +214,16 @@ h2 {
     align-items: center;
     gap: 3px;
     font-family:'Courier New', Courier, monospace;
-    color: rgb(35, 35, 35);
+    color: rgb(255, 255, 255);
     font-weight: 600;
 }
 
 .dimension-input {
     width: 50px;
     padding: 4px;
-    border: 2px solid #7f3e66;
+    background-color: rgba(250, 250, 250, 0.451);
+    border-style: none;
     border-radius: 5px;
-}
-
-.build-grid-button {
-    padding: 6px 12px;
-    margin-top: 0.5rem;
 }
 
 /* Close button */
@@ -231,9 +233,9 @@ h2 {
     left: 0;
     top: 0;
     margin: -1px;
-    background-color: rgb(255, 61, 61);
+    background-color: rgba(171, 3, 3, 0.843);
     color: white;
-    border: 1.5px solid rgb(0, 0, 0);
+    border: 1.5px solid rgb(102, 102, 102);
     border-radius: 100px;
     height: 25px;
     width: 25px;
