--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /* index.html */
 body {
     display: flex;
@@ -74,7 +73,9 @@ path-finding-simulator {
     flex-direction: column;
     flex-wrap: wrap;
     position: absolute;
-    bottom: -100px; 
+    bottom: -100px;
+    transform: scale(0.9);
+    transform-origin: center;
 }
 
 .grid-map {
@@ -164,7 +165,6 @@ button {
 }
 h2 {
     margin-bottom: 5px;
-    margin-left: 20px;
     margin-top: 5px;
     font-family:'Courier New', Courier, monospace;
 }
@@ -291,6 +291,7 @@ html, body {
     height: 5000px;
     background-image: radial-gradient(circle, #999 1px, transparent 1px);
     background-size: 20px 20px;
+    text-align: center;
   }
 
   .world-header {
@@ -299,15 +300,20 @@ html, body {
     height: fit-content;
     padding: 20px;
     font-size: xx-large;
-    font-family:monospace;
+    font-family: monospace;
     background-color: #f0f0f0;
-    top: 50%;
+    top: calc(50% - 50px); /* Moved up 50px */
     left: 50%;
     transform: translate(-50%, -50%);
     color: rgba(0, 0, 0, 0.324);
     user-select: none;
   }
   
+  
   .component {
     position: absolute;
   }
+
+  p {
+    font-size: large;
+  } 
